--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -74,7 +74,7 @@ button {
   color: var(--dark);
   background-color: transparent;
   border: none;
-  padding: 0.4em 1.2em 0.48em;
+  padding: 0.3em 1.2em 0.5em;
   border-radius: 0.2em;
   cursor: pointer;
 }
